[package]
edition = "2021"
name = "svgo-rs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.0", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
regex = "1.8.1"
swc_core = { version = "0.78.28", features = [
  "ecma_ast",
  "ecma_ast_serde",
  "common_concurrent",
  "bundler",
  "ecma_loader",
  "ecma_transforms",
  "ecma_visit",
  "ecma_codegen",
  "base_node",
  "__parser",
] }
swc_xml = "0.11.21"
linked-hash-map = "0.5.6"

[build-dependencies]
napi-build = "2.0.1"

[dev-dependencies]
pretty_assertions = "1.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
testing = "0.32.5"

[profile.release]
lto = true
