[package]
authors = ["SyMind <dacongsama@live.com>"]
name = "svgo_binding"
version = "0.0.0"
edition = "2021"
publish = false
license = "MIT"

[lib]
bench      = false
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.0", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
svgo-rs = { path = "../core", features = ["node"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
